--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=League+Script&family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libertinus+Serif+Display&display=swap');
+* {
+    margin: 0%;
+    padding:0%;
+    box-sizing: border-box;
+}
+body{
+    background-color:antiquewhite; 
+    font-family:"Cabin", sans-serif; 
+    color: rgb(107, 89, 66);
+    
+      
+}
 .cabecalho {
-    background-image: url("/assets/background_cabecalho.png");
+    background-color: rgb(88, 23, 23);
+    color: #ffffff;
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
@@ -8,24 +23,63 @@
 
     ul {
         display: flex;
+         background-color: #333;
         justify-content: space-around;
         list-style: none;
         margin: 0px 0px 4px 0px;
+    
     }
+    nav ul li a:hover {
+        background-color: #b6a1a1; 
+        color: #fff; 
+        border-radius: 3px;
+    }
+    
+    li{
+        color: black;
+    }
+    
+    h1 {
+        text-align: center;
+        margin: 4px 0px;
+        margin-top: 1rem;
+        
 
-    h1,
+    }
     h3 {
         text-align: center;
         margin: 4px 0px;
+        font-family: "Libertinus Serif Display", system-ui;
+        font-weight: 200;
     }
-
+    
     div {
         background-color: rgb(255, 255, 255, 0.25);
         display: flex;
         flex-direction: column;
+        text-decoration: none;
     }
-}
 
+}
+h2{
+    color: #333;
+    margin: 1rem;
+}
+h4{
+    color: #333;
+    margin: 1rem;
+
+}
+p{
+    margin-left: 1rem;
+    margin-right: 1rem;
+   
+}
+a{
+    color:antiquewhite; 
+    text-decoration: none;
+   
+}
 .conteudo {
     margin-top: 130px;
 }
@@ -33,4 +87,15 @@
 .imagem {
     height: 300px;
     width: 600px;
+    display: block;  
+    margin: 0 auto;
+    padding: 2rem;
+    
+}
+footer{
+    background-color: #333; /* Cor de fundo escura */
+    color: #fff; /* Cor do texto branca */
+    padding: 20px; /* Espaçamento interno */
+    text-align: center; /* Centraliza o texto */
+    margin-top: 2rem;
 }
