--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 
 .cabecalho {
-    background-color: rgb(88, 23, 23);
+    background-color: #0052CC;
     color: white;
     padding: 20px 0;
     position: fixed;
@@ -29,6 +29,7 @@ body {
     font-size: 2rem;
     text-align: center;
     margin-bottom: 5px;
+    color: white;
 }
 
 .cabecalho h3 {
@@ -37,6 +38,7 @@ body {
     font-weight: 400;
     max-width: 800px;
     margin: 0 auto 15px auto;
+    color: white;
 }
 
 
@@ -58,7 +60,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color:#00BFA6;
 }
 
 
@@ -69,7 +71,7 @@ section {
     margin: 0 auto;
     scroll-margin-top: 20px; 
     border-radius: 5px;
-    background-color: #f9fafb;
+    background-color: #F4F7F9;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     transition: transform 0.3s ease;
@@ -82,14 +84,14 @@ section p{
 
 h2 {
     font-size: 1.8rem;
-    color: rgb(88, 23, 23);
+    color: #0052CC;
     margin-bottom: 20px;
     text-align: center;
 }
 
 h4 {
     font-size: 1.3rem;
-    color: rgb(88, 23, 23);
+    color: #0052CC;
     margin-top: 20px;
 }
 
@@ -117,7 +119,7 @@ p {
 
 
 footer {
-    background-color: rgb(88, 23, 23);
+    background-color: #0052CC;
     color: white;
     text-align: center;
     padding: 20px 10px;
@@ -156,6 +158,7 @@ html {
 
 .card:hover {
       transform: translateY(-5px);
+      box-shadow: 0 4px 12px #00BFA6;
 }
 
 .card summary {
@@ -213,3 +216,78 @@ ul li {
     text-align: center;
   
 }
+
+@media screen and (max-width: 768px) {
+
+    .cabecalho {
+        position: relative; 
+        padding: 10px 0;
+        text-align: center;
+    }
+
+    .cabecalho h1 {
+        font-size: 1.4rem;
+        margin-bottom: 5px;
+    }
+
+    .cabecalho h3 {
+        font-size: 0.9rem;
+        margin-bottom: 10px;
+    }
+
+    
+    nav ul {
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    nav ul li a {
+        font-size: 0.9rem;
+        padding: 6px 10px;
+    }
+
+    
+    section {
+        padding-top: 40px;  
+        padding-bottom: 40px;
+        margin: 20px 10px;
+    }
+
+    
+    .imagem {
+        width: 100%;
+        height: auto;
+    }
+
+    
+    .card {
+        width: 100%;
+        max-width: 320px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .cabecalho h1 {
+        font-size: 1.8rem;
+        position: relative;
+    }
+
+    .cabecalho h3 {
+        font-size: 0.95rem;
+    }
+
+    .cards-container {
+        gap: 15px; 
+
+    .card {
+        width: 280px; 
+    }
+
+    section {
+        max-width: 900px; 
+        padding-top: 180px;
+    }
+}
+}
+
+
